--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 PORT=3000
-DB_CONNECT=mongodb+srv://singhyash3012:yABxjtYM0lbdDk7g-vt@cluster0.pn5rg.mongodb.net/
-DB_PASSWORD=yABxjtYM0lbdDk7g-vt
+DB_CONNECT=mongodb+srv://singhyash307g-vt@cluster0.pn5rg.mongodb.net/
+DB_PASSWORD=yAbdDk7g-vt
 JWT_SECRET=
-GOOGLE_CLIENT_ID=108805625713-s619fkelacb4k6kqf6ekg3r0hg33rano-vt2025.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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-vt2025
+GOOGLE_CLIENT_ID=108805625g3r0hg33rano-vt2025.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=GOCSPX-C_RRxB4Z2c-oeT-vt2025
 SESSION_SECRET=
 NODE_ENV=
 RAZORPAY_KEY_ID=
